# pytest-inject

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/pytest_inject/: exceptions.py  help_strings.py  injector.py  plugin.py
tests/: conftest.py  pytest_session_reporter.py  test_injecting.py
tests/data/: inject_1_string.json  inject_1_string.py
tests/tests_injected/: argument_values.py  conftest.py  test_injected.py
