[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-inject"
version = "0.1.0"
description = "A pytest plugin that allows you to inject arguments into fixtures and parametrized tests using pytest command-line options."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Liad Inon" },
]
requires-python = ">=3.8"
classifiers = [
    "Framework :: Pytest",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pytest>=6.0.0",
]

[project.urls]
Repository = "https://github.com/liad-inon/pytest-inject/"
Homepage = "https://github.com/liad-inon/pytest-inject/"

[project.entry-points.pytest11]
pytest_inject = "pytest_inject.plugin"

[tool.hatch.envs.default]
python = "3.8"

[tool.hatch.envs.hatch-test]
default-args = ["tests"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]